# dsk_android

app/: build.gradle
app/src/androidTest/java/mo/bioinf/bmark/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/gatb-core/gatb-core/: CMakeLists.txt
app/src/main/cpp/kraken/: CMakeLists.txt
app/src/main/cpp/kraken/classify/: CMakeLists.txt
app/src/main/cpp/kraken/classify/src/: classify.cc
app/src/main/cpp/kraken/dump_table/: CMakeLists.txt
app/src/main/cpp/kraken/dump_table/src/: .mmap_file.cc.swp
app/src/main/cpp/kraken/estimate_capacity/: CMakeLists.txt
app/src/main/cpp/kraken/lookup_accession_numbers/: CMakeLists.txt
app/src/main/cpp/kraken/lookup_accession_numbers/src/: lookup_accession_numbers.cc
app/src/main/cpp/kraken/src/: classify.cc  kraken2_headers.h
app/src/main/cpp/src/: CustomSortingCountAlgorithm.cpp  CustomSortingCountAlgorithm.h  CustomSortingCountAlgorithm.hpp  DSK.cpp  DSK.hpp  bcalm_1.cpp  main.cpp
app/src/main/java/mo/bioinf/bmark/: ByteReader.java  (+17 more)
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_dskrunning.xml  activity_home.xml  activity_home2.xml  activity_main.xml  activity_results.xml  activity_settings.xml  content_dskrunning.xml  content_results.xml  content_settings.xml  fragment_dsk__main_.xml  fragment_dskrunning.xml  fragment_vari__main_.xml
app/src/main/res/menu/: drawer_menu.xml  navigation_items.xml
app/src/main/res/values/: strings.xml  styles.xml
gradle/wrapper/: gradle-wrapper.properties
(+26 files in other folders)
