cmake_minimum_required(VERSION 2.8.9)
project(Kraken)

if (${ANDROID_ABI} STREQUAL "x86_64")
    include_directories(${ANDROID_SYSROOT}/usr/include/x86_64-linux-android)
elseif (${ANDROID_ABI} STREQUAL "x86")
    include_directories(${ANDROID_SYSROOT}/usr/include/i686-linux-android)
elseif (${ANDROID_ABI} STREQUAL "arm64-v8a")
    include_directories(${ANDROID_SYSROOT}/usr/include/aarch64-linux-android)
elseif (${ANDROID_ABI} STREQUAL "armeabi-v7a")
    include_directories(${ANDROID_SYSROOT}/usr/include/arm-linux-androideabi)
endif()

SET(CMAKE_CXX_FLAGS "-fopenmp -Wall -std=c++11 -O3")

file(GLOB CLASSIFY_SOURCES "src/*.cc")

add_library(classify SHARED ${CLASSIFY_SOURCES})